--- a/NDK-1.ipynb
+++ b/NDK-1.ipynb
@@ -216,18 +216,6 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "skip"
-    }
-   },
-   "source": [
-    "<div><img style=\"padding-right:50px;padding-top:2px;float:right\" align=\"left\" src=\"attachment:Bildschirmfoto%202020-09-15%20um%2011.47.28.png\" width=\"256\"/></div>"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
      "slide_type": "slide"
     }
    },
@@ -334,6 +322,133 @@
     "   * die Layer 5 bis 7 werden in eine \"Applikationsschicht\" zusammengefasst (normalerweise trotzdem als \"Layer-7\" bezeichnet)\n",
     "   * vereinzelt tatsächliche 7-Layer Implementation (Sun-RPC, XDR, YP, NFS)\n",
     "   * alle populären Anwendungen orientieren sich mehrheitlich am 5-Layer (1, 2, 3, 4, 7) Modell: DNS, HTTP, SMTP, IMAP, etc"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Protocol Layers Operation\n",
+    "\n",
+    "*TODO*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## PSTN to Internet 1/5\n",
+    "\n",
+    "* PSTN (Public-Switched-Telephone-Network) war in den 70' Jahren ein _circuit switched_ Netzwerk:\n",
+    "   * Beim Verbindungsaufbau wurde mit jeder weiter gewählten Ziffer ein weiterer 1:10 Relaisverteiler angesprochen\n",
+    "     z.B. [Rotary Switch](https://www.youtube.com/watch?v=xZePwin92cI)\n",
+    "   * jeder der 10 Ausgänge ist mit einer elektrischen Leitung zu einem nächsten Eingang verbunden.\n",
+    "     Die Switches sind (in Gruppen) örtlich verteilt, d.h. jede Leitung führt näher zum Empfänger\n",
+    "\n",
+    "Ein solches Netzwerk ist _circuit switched_ , d.h. nach dem Verbindungsaufbau existiert eine _dedizierte_ Leitung (über die Relais) vom Anrufer zum Empfänger. Diese Leitung ist _exklusiv_ und kann während der Dauer des Anrufs nicht weiter verwendet werden.\n",
+    "\n",
+    "Anmerkung: heute wird für das Telefonnetz manchmal noch der Begriff PSTN benutzt, die Technik wurde aber schon in den 80' Jahren auf _packet-switched_ umgestellt (s.u.)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### PSTN to Internet 2/5\n",
+    "\n",
+    "Vor- und Nachteile der circuit-switched Technik:\n",
+    "\n",
+    "$+$ exklusive Nutzung der Leitung während des Gesprächs, sehr gute Qualität\n",
+    "\n",
+    "$-$ schlechte Auslastung des Netzwerks: es muss eine \"Überprovisionierung\" stattfinden, d.h. es müssen viel mehr Leitungen als normalerweise im Gebrauch gelegt werden\n",
+    "\n",
+    "$-$ Fehleranfälligkeit: bei Ausfall eines Relais wird die Verbindung unterbrochen (und kann möglicherweise nicht neu aufgebaut werden)\n",
+    "\n",
+    "$-$ \"Skaliert\" sehr schlecht, d.h. am Schluss sieht es dann so: [Stockholm Telephone Exchange](https://www.ericsson.com/en/blog/2014/10/when-the-telephone-lines-darkened-the-sun-in-stockholm) aus"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### PSTN to Internet 3/5\n",
+    "\n",
+    "Mitte der 60' Jahre traten die DARPA und das DoD (beides dem Militär nahestehende Organisationen) als Sponsor für ein _Datenkommunikationsnetzwerk_ auf, das folgende Punkte\n",
+    "erfüllen sollte:\n",
+    "\n",
+    "* Wiederstandsfähig gegenüber Ausfällen einzelner Verbindungsknoten (resilience), auch im \"Katastrophenfall\"\n",
+    "* Skalierbar in der Grösse des Netzwerks aber auch in der verfügbaren Datenrate (scalability)\n",
+    "* Ökonomisch betreibbar, keine riesige Überprovisionierung wie beim (circuit-switched) PSTN\n",
+    "\n",
+    "Diese Ziele waren nur erreichbar durch den Einsatz der \"Packet-Switched\" Technik...\n",
+    "\n",
+    "Daraus entstand das [ARPANET](https://en.wikipedia.org/wiki/ARPANET), der Vorläufer des jetzigen Internets.\n",
+    "Das ARPANET benutzte als erstes grösseres Netzwerk die Protokollfamilie TCP/IP.\n",
+    "\n",
+    "Das Design orientiert sich am Schichtenmodell: auf Frame- (L2) und Paketebene (L3) wird z.B. nicht versucht ein verlorenes Paket neu zuzustellen (keine \"Quittung\"). Diese Funktion wird völlig unabhängig in der Schicht L4 (TCP) implementiert."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### PSTN to Internet 4/5\n",
+    "\n",
+    "Vor- und Nachteile der packet-switched Technik (Internet und nicht mehr eingesetzte ATM-Technik hauptsächlich für Telefonie):\n",
+    "\n",
+    "$+$ (resilience) Jedes Datenpaket wird bei jeder Relaisstation (Router) individuell weitergeleitet. Wenn eine Strecke/Router ausfällt oder eine Überlastsituation eintritt, wird einfach der nächst beste Pfad (next-hop) bestimmt.\n",
+    "\n",
+    "$+$ (scalability) die Verbindungsleitungen werden nicht mehr \"exklusiv\" geschaltet, d.h. Pakete mit verschiedensten Absende- und Empfängeradresse teilen sich eine Leitung (\"time-domain/division-multiplexing\"). Zudem können \"Trunk\"-Leitungen (z.B. Unterseekabel) einfach mit einer höheren Datenrate skaliert werden (anstatt mehr Leitungen zu ziehen)\n",
+    "\n",
+    "$+$ (ökonomisch) durch die nicht-exlusive Nutzung der Leitungen sind auch viel weniger davon nötig. \n",
+    "\n",
+    "$-$ Der Datenstrom muss \"digitalisiert\" und paketiert werden (das ist eigentlich nicht unbedingt ein Nachteil)\n",
+    "\n",
+    "$-$ Pakete können in unterschiedlicher Reihenfolge beim Empfänger eintreffen (Lösung: TCP)\n",
+    "\n",
+    "$-$ Pakete können dupliziert werden oder ganz verlorengehen (Lösung: Applikation und TCP)\n",
+    "\n",
+    "Anmerkung: in heutigen Hochleistungsnetzwerken wird oft eine Technik mit \"vorkalkulierter\" Route verwendet (Route-Caches und Techniken wie z.B. MPLS, Label-Switching). Der Grundgedanke des packet-switching bleibt aber auch da bestehen."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### PSTN to Internet 5/5\n",
+    "\n",
+    "Das \"Internet\", respektive \"TCP/IP\":\n",
+    "\n",
+    "* Packet-Switched\n",
+    "* TDM\n",
+    "* Layer-Model\n",
+    "\n",
+    "Historisch:\n",
+    "\n",
+    "* Ende der 70' bis Ende 80' Jahre wurde das \"Internet\" von der NSF (National-Science-Foundation) betrieben.\n",
+    "  Der Wandel vom \"militärischen\" zum \"wissenschaftlichen\" Netzwerk war damit vollzogen.\n",
+    "  Viele internationale Universitäten hatten bereits einen Anschluss an das NSF-Netz.\n",
+    "\n",
+    "* Anfang der 90' Jahre wurde das \"Internet\" kommerzialisiert, anstelle des NSF-Backbones wurden die Transit- und Endbenutzeranschlüsse von privaten Organisationen implementiert. 1991 wurde das NSF-Netz (\"ARPA-Net\") dekommisioniert, die ```10.0.0.0/8```-Adressen, die sie vielleicht schon gesehen haben wurden damals freigegeben\n",
+    "\n",
+    "* Heute findet praktisch alle Datenkommunikation (auch digitale Telefonie) über das \"Internet\" statt. \n",
+    "  Der Sieg der Pragmatiker!"
    ]
   },
   {
