--- a/NDK2/NKD2.tex
+++ b/NDK2/NKD2.tex
@@ -487,7 +487,8 @@ Die meisten Netzwerkkabel mit RJ-45 Stecker f\"ur Ethernet
 \end{figure}
 \begin{figure}
 \includegraphics[width=0.6\textwidth]{2-15.jpg}
-\caption{ \tiny{2-15\footnotemark[1], Satelliten}}
+\caption{ \tiny{2-15
+\footnotemark[1], Satelliten}}
 \end{figure}
 \end{column}
 \end{columns}
