--- a/NDK4/nd04.tex
+++ b/NDK4/nd04.tex
@@ -38,6 +38,16 @@
 \includegraphics[width=10cm]{L2-base-network-L2-gateway.pdf}
 \end{frame}
 
+\begin{frame}
+\frametitle{L2 Intermediate Device Operation (Bridge)}
+\includegraphics[width=10cm]{L2_intermediate-device}
+\end{frame}
+
+\begin{frame}
+\frametitle{L3 Intermediate Device Operation (Router)}
+\includegraphics[width=10cm]{L3_intermediate-device}
+\end{frame}
+
 \section{ND04: IP Layer-3}
 \subsection{\"Ubersicht}
 
