start of NDK4, IP

--- a/NDK4/nd04.tex
+++ b/NDK4/nd04.tex
@@ -16,6 +16,7 @@
 \begin{document} % ===============================================================
 
 \begin{frame}
+\myurl{https://www.youtube.com/watch?v=QKfk7YFILws}
 \begin{tiny}
 \begin{itemize}
   \item picture example of L2-network not scaling
